# Cyber-AI

./: Cyber AI Slide List.docx  Cyber AI presentation shorthand.docx  miniproject.ipynb  project proposal.odt  pyproject.toml
cyber_ai/: genetic_algorithm.py  lab_1.ipynb  language_browser.py  miniproject.ipynb  minproject.py
data/: Training_data_reduced.csv  mandarin_radicals.csv  winequality-s.csv
