[tool.poetry]
name = "cyber-ai"
version = "0.1.0"
description = ""
authors = ["gaulgeous <gauldavid78259@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
tpot = "^0.12.1"
dash = "^2.14.2"
seaborn = "^0.13.2"
polars = "^0.20.6"
pyarrow = "^15.0.0"
torch = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
